--- a/.github/workflow/cd.yml
+++ b/.github/workflow/cd.yml
@@ -1,8 +1,8 @@
 ---
-name^ Continuous Deployment
+name: Continuous Deployment
 
 on: push
-jobs: 
+jobs:
   hello-gh-actions:
     name: Hello GitHub actions
     runs-on: ubuntu-20.04
@@ -11,4 +11,3 @@ jobs:
         uses: actions/checkout@v2
       - name: Run Tests
         run: echo "RUNNING TESTS"
-
