--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,11 +3,19 @@ name: Continuous Deployment
 
 on: push
 jobs:
-  hello-gh-actions:
-    name: Hello GitHub actions
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Run Tests
-        run: echo "RUNNING TESTS"
+  name: Tests
+  runs-on: ubuntu-20.04
+  steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Test
+      run: docker-compose run --rm app sh -c "python manage.py test"
+
+  lint:
+  name: Lint
+  runs-on: ubuntu-20.04
+  steps:
+    - name: Checkout 
+      uses: actions/checkout@v2
+    - name: Lint 
+      run: docker-compose run --rm app sh -c "flake8"
