--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,13 +4,14 @@ name: Continuous Deployment
 on: push
 
 jobs:
-  name: Test
-  runs-on: ubuntu-20.04
-  steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Test
-      run: docker-compose run --rm app sh -c "python manage.py test"
+  test:
+    name: Test
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Test
+        run: docker-compose run --rm app sh -c "python manage.py test"
 
   lint:
     name: Lint
